# mcp-relay

./: .gitignore  Cargo.toml  README.md
config/: README.md  config.json  mcp-relay.service
docu/: relay-shield-rockpi-e.md
examples/: test_sequence.rs
prg/: handler.rs  main.rs  main_stdio.rs
src/: lib.rs
