# Filename: Cargo.toml
# V 2.0 2024-12-28 REST API, removed MCP dependencies

[package]
name = "mcp-relay"
version = "0.2.0"
edition = "2021"

[lib]
name = "relay"
path = "src/lib.rs"

[[bin]]
name = "relay-rest-server"
path = "prg/main.rs"

[dependencies]
sysfs_gpio = "0.6"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
